@@ -1,5 +1,11 @@
 2008-08-15  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/chart/axis/SymbolAxis.java
+    (drawGridBandsHorizontal): Use gridBandAlternatePaint,
+    (drawGridBandsVertical): Likewise.
+
+2008-08-15  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/chart/plot/CategoryPlot.java
     (getRendererCount): New method,
     * source/org/jfree/chart/plot/XYPlot.java
